@@ -27,6 +27,7 @@ kwds['version'] = pat.search(data).group(1)
 macros = []
 if platform.python_implementation() == 'PyPy' or sys.version_info[0] == 2:
     macros.append(("PY_LITTLE_ENDIAN", str(int(sys.byteorder == 'little'))))
+    macros.append(("PY_BIG_ENDIAN", str(int(sys.byteorder == 'big'))))
 
 setup(
     name = "bitarray",
